@@ -2,6 +2,7 @@
 
 	* testsed.sh: Fix calls to close() in embedded awk programm.
 	* sed0.c: Remove trailing whitespace from one of the lines.
+	* Makefile: Compile sed for debugging.
 
 2018-07-20         Arnold D. Robbins     <arnold@skeeve.com>
 
